--- a/36_有效的数独.md
+++ b/36_有效的数独.md
@@ -66,22 +66,21 @@
 ```java
 class Solution {
     public boolean isValidSudoku(char[][] board) {
-        int[][]row = new int[9][10];// 行
-        int[][]col = new int[9][10];// 列
-        int[][]box = new int[9][10];// 看数字是否出现过
-        // for box, i/3, 
+        // 行 列
+		var row = new int[10][10];
+		var col = new int[10][10];
+        var box = new int[10][10];
         for(int i=0;i<9;i++){
             for(int j=0;j<9;j++){
-                if(board[i][j]=='.')continue;
+                // 如何把 3*3 的九个格子归类到一起?
+                if(board[i][j]=='.') continue;
                 int cur = board[i][j]-'0';
-                // 同一行同一列不能出现过
-                if(row[i][cur]==1) return false; 
-                if(col[j][cur]==1) return false; 
-                if(box[j/3+(i/3)*3][cur]==1) return false;
-
+                if(row[i][cur]==1) return false;
+                if(col[j][cur]==1) return false;
+                if(box[i/3 + j/3*3][cur]==1) return false;
                 row[i][cur]=1;
                 col[j][cur]=1;
-                box[j/3+(i/3)*3][cur]=1;
+                box[i/3 + j/3*3][cur]=1;
             }
         }
         return true;
@@ -103,7 +102,9 @@ class Solution {
 
 然后遍历board每一个元素,  如果同一行 / 同一列 / 同一个3*3区域内出现了相同的元素, 返回false
 
+其中 `box`数组的下标都无所谓,  关键在于我们需要标记出来每一块是独立的, 避免它们互相干扰
 
+![](assets/image-20231213103325556.png)
 
 
 
