--- a/313_超级丑数.md
+++ b/313_超级丑数.md
@@ -8,8 +8,6 @@
 
 题目数据保证第 `n` 个 **超级丑数** 在 **32-bit** 带符号整数范围内。
 
- 
-
 **示例 1：**
 
 ```
@@ -86,9 +84,7 @@ for(int j=0;j<primes.length;j++){
 }
 ```
 
-比如 
-
-2 7 13 19
+比如  `2 7 13 19` 的入参
 
 如果每次只是移动单个指针,  会出现 
 
