--- a/139_单词拆分.md
+++ b/139_单词拆分.md
@@ -109,6 +109,29 @@ class Solution {
 }
 ```
 
+**另一种DP的做法是不使用Set , 通过equals判断**
+
+```java
+class Solution {
+    public boolean wordBreak(String s, List<String> wordDict) {
+        var n = s.length();
+        boolean[]dp = new boolean[n+1];
+        dp[0]=true;
+        for(int i=0;i<=n;i++){
+            if(!dp[i]) continue;
+            for(String word : wordDict){
+                if(word.length()+i<=n && s.substring(i,i+word.length()).equals(word)){
+                    dp[i+word.length()]=true;
+                }
+            }
+        }
+        return dp[n];
+    }
+}
+```
+
+
+
 ## 思路
 
 ### 回溯
@@ -127,3 +150,6 @@ class Solution {
 如果确定`dp[j] `是true，且 `[j, i] `这个区间的子串出现在字典里，那么dp[i]一定是true。`（j < i ）`。
 
 所以递推公式是` if([j, i]` <u>这个区间的子串出现在字典里 && dp[j]是true) 那么 dp[i] = true。</u>
+
+
+
