--- a/53_最大子数组和.md
+++ b/53_最大子数组和.md
@@ -60,6 +60,27 @@ class Solution {
 }
 ```
 
+代码优化( 空间O1)
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int n= nums.length;
+        int pre=0;
+        int res=Integer.MIN_VALUE;
+        for(int i=1;i<=n;i++){
+            if(pre>=0){
+                pre=pre+nums[i-1];
+            }else{
+                pre=nums[i-1];
+            }
+            res=Math.max(res,pre);
+        }
+        return res;
+    }
+}
+```
+
 
 
 ## 思路
@@ -88,3 +109,68 @@ class Solution {
 初始化 dp[0] = nums[0] (要求是子数组,  至少需要包含数组中的一个元素)
 
 对于本题的状态转移,  **我们需要统计的最大值并不一定是 最后的dp[n-1]**  , 因此需要维护一个res用来统计最大和的连续子数组
+
+
+
+-----
+
+2024年1月8日 二刷
+
+
+
+
+
+非常经典的**DP**, 关于DP的问题, 我们首先需要考虑DP数组的定义
+
+本题首先定义DP数组的含义如下: 
+`dp[i]表示[0,i] 中以nums[i-1]结尾最大和的连续子数组的值`
+
+至于为什么需要以`nums[i-1]` 结尾, 是考虑到 题目的要求是 **连续子数组** , 如果我们需要在下一个元素中利用到之前的状态(DP) , 就必须要这样去定义DP数组
+
+另外由于题目的要求是**子数组**, 因此及时数组中的元素全是负数 or  最大和的连续子数组是负数, 都需要计算出来, 而不是返回 0 
+
+由于DP数组的定义并不是 子数组的最大和, 因此需要维护res作为 子数组的最大和, 最后返回即可。
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int n= nums.length;
+        int[]dp=new int[n+1];
+        dp[0]=0;
+        // dp[i]表示[0,i] 中以nums[i-1]结尾最大和的连续子数组的值
+        // (因为连续子数组必须要当前元素与之前的元素连续)
+        int res=Integer.MIN_VALUE;
+        for(int i=1;i<=n;i++){
+            if(dp[i-1]>=0){
+                dp[i]=dp[i-1]+nums[i-1];
+            }else{
+                dp[i]=nums[i-1];
+            }
+            res=Math.max(res,dp[i]);
+        }
+        return res;
+    }
+}
+```
+又因为上面的DP数组我们只关心最后一个状态的值, 因此可以优化空间复杂度为O(1)
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int n= nums.length;
+        int pre=0;
+        int res=Integer.MIN_VALUE;
+        for(int i=1;i<=n;i++){
+            if(pre>=0){
+                pre=pre+nums[i-1];
+            }else{
+                pre=nums[i-1];
+            }
+            res=Math.max(res,pre);
+        }
+        return res;
+    }
+}
+```
+最终解法的空间复杂度为*O(1)* 
+时间复杂度为*O(N)*
