--- a/142_环形链表 II.md
+++ b/142_环形链表 II.md
@@ -2,24 +2,6 @@
 
 [142. 环形链表 II](https://leetcode.cn/problems/linked-list-cycle-ii/)
 
-[labuladong 题解](https://labuladong.github.io/article/slug.html?slug=linked-list-cycle-ii)[思路](https://leetcode.cn/problems/linked-list-cycle-ii/description/#)
-
-
-
-中等
-
-
-
-
-
-2.4K
-
-
-
-
-
-相关企业
-
 给定一个链表的头节点  `head` ，返回链表开始入环的第一个节点。 *如果链表无环，则返回 `null`。*
 
 如果链表中有某个节点，可以通过连续跟踪 `next` 指针再次到达，则链表中存在环。 为了表示给定链表中的环，评测系统内部使用整数 `pos` 来表示链表尾连接到链表中的位置（**索引从 0 开始**）。如果 `pos` 是 `-1`，则在该链表中没有环。**注意：`pos` 不作为参数进行传递**，仅仅是为了标识链表的实际情况。
@@ -90,15 +72,19 @@ public class Solution {
         while(f!=null && f.next!=null){
             s=s.next;
             f=f.next.next;
-            if(s==f) break;
+            // 找到了一个交点
+            if(s==f){
+                break;
+            }
         }
+        // 不存在环
         if(f==null || f.next==null) return null;
-        s=head;
-        while(s!=f){
-            s=s.next;
-            f=f.next;
+        ListNode p1 =head,p2=f;
+        while(p1!=p2){
+            p1=p1.next;
+            p2=p2.next;
         }
-        return s;
+        return p1;
     }
 }
 ```
@@ -107,8 +93,44 @@ public class Solution {
 
 空间O(1)的思路: 快慢指针
 
-如果一个链表中没有环 , 那么快指针一定会率先遍历结束,  指向null
+**如果一个链表中没有环 , 那么快指针一定会率先遍历结束,  指向null**
 
 因此我们可以利用这一点来解决题目中链表不存在环的样例
 
-剩下的就是基本的代码了
+**剩下的就是基本的代码了**
+
+
+
+<img src="assets/3.jpeg" style="zoom: 33%;" />
+
+
+
+<img src="assets/2.jpeg" style="zoom: 33%;" />
+
+假设 s 走了 k , f走了2k
+
+并且如果两个节点相遇, 那么相遇点必定在链表的环中
+
+假设相遇点 距离 环起点m
+
+可以得出 head距离 环起点 k-m
+
+因此环中剩余部分的长度就是 k - m 
+
+所以另起2个节点, **依次从 head 以及 相遇点 走 k-m步, 就可以到达环的起点**
+
+```java
+while(p1!=p2){
+    p1=p1.next;
+    p2=p2.next;
+}
+```
+
+
+
+
+
+
+
+
+
