--- a/24_两两交换链表中的节点.md
+++ b/24_两两交换链表中的节点.md
@@ -2,27 +2,9 @@
 
 [24. 两两交换链表中的节点](https://leetcode.cn/problems/swap-nodes-in-pairs/)
 
-[思路](https://leetcode.cn/problems/swap-nodes-in-pairs/description/#)
-
-
-
 中等
 
-
-
-
-
-2.1K
-
-
-
-
-
-相关企业
-
 给你一个链表，两两交换其中相邻的节点，并返回交换后链表的头节点。你必须在不修改节点内部的值的情况下完成本题（即，只能进行节点交换）。
-
- 
 
 **示例 1：**
 
@@ -67,6 +49,23 @@ class Solution {
     }
 }
 ```
+
+2024年1月13日17:43:33
+
+```java
+class Solution {
+    public ListNode swapPairs(ListNode head) {
+        if(head==null || head.next==null) return head;
+        var cur = head;
+        var next = head.next;
+        cur.next = swapPairs(next.next);
+        next.next = cur;
+        return next;
+    }
+}
+```
+
+
 
 ## 思路
 
