--- a/994_腐烂的橘子.md
+++ b/994_腐烂的橘子.md
@@ -108,3 +108,7 @@ class Solution {
 - 始终会有橘子不会被腐败到 , return -1
 - 可以腐败所有的橘子 , return res 
 
+一定要注意, BFS的条件需要加上 cnt > 0 , 否则会导致在统计时间的时候 多统计一次
+
+> 队列中的元素不为空不代表还有 没有腐烂的橘子
+
