--- a/207_课程表.md
+++ b/207_课程表.md
@@ -108,6 +108,45 @@ class Solution {
 }
 ```
 
+### DFS-数组写法-- 会比List快 1ms
+
+```java
+class Solution {
+    // 1 表示访问过, -1表示遍历过不会成环(剪枝)
+    int[]vis;
+    public boolean canFinish(int numCourses, int[][] prerequisites) {
+        // 通过课程的先后关系, 构造图
+        List<Integer>[] g = new ArrayList[numCourses];
+        vis = new int[numCourses];
+        for(int i=0;i<numCourses;i++){
+            g[i]=new ArrayList<>();
+        }
+        for(int[]cur:prerequisites){
+            // cur[0] 当前 cur[1] 前置课程, cur[1] ---> cur[0]
+            g[cur[1]].add(cur[0]);
+        }
+        // 构成出来图之后, 我们遍历图, 判断是否可以学习到所有的课程
+        for(int i=0;i<numCourses;i++){
+            if(dfs(g,i)) return false;
+        }
+        return true;
+    }
+
+    private boolean dfs(List<Integer>[]g , int cur){
+        // 当前节点访问过, 这里又访问到了
+        if(vis[cur]==1) return true;
+        // 当前节点已经被访问过, 并且已经断定没有成环
+        if(vis[cur]==-1) return false;
+        vis[cur]=1;
+        for(int node:g[cur]){
+            if(dfs(g,node)) return true;
+        }
+        vis[cur]=-1;
+        return false;
+    }
+}
+```
+
 ## 思路
 
 <u>其中 `prerequisites[i] = [ai, bi]` ，表示如果要学习课程 `ai` 则 **必须** 先学习课程 `bi` 。</u>
