--- a/22_括号生成.md
+++ b/22_括号生成.md
@@ -4,8 +4,6 @@
 
 数字 `n` 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 **有效的** 括号组合。
 
- 
-
 **示例 1：**
 
 ```
@@ -20,8 +18,6 @@
 输出：["()"]
 ```
 
- 
-
 **提示：**
 
 - `1 <= n <= 8`
@@ -30,7 +26,6 @@
 
 ```java
 class Solution {
-
     List<String> res = new ArrayList<>();
 
     StringBuilder sb = new StringBuilder();
@@ -38,31 +33,33 @@ class Solution {
     int max;
 
     public List<String> generateParenthesis(int n) {
-        max = n+n;
+        this.max = n*2;
         process(n,n);
         return res;
     }
 
-    // 递归生成括号, 每次在生成的时候需要保证left>=right
+    // 分别代表左右括号的size(剩余)
     private void process(int left,int right){
-        if(left>right) return ;
         if(sb.length()==max){
             res.add(sb.toString());
             return;
+        }
+        if(left>right){
+            return ;
         }
         if(left>0){
             sb.append("(");
             process(left-1,right);
             sb.deleteCharAt(sb.length()-1);
         }
+
         if(right>0){
             sb.append(")");
             process(left,right-1);
             sb.deleteCharAt(sb.length()-1);
         }
+
     }
-    
-    
 }
 ```
 
