--- a/394_字符串解码.md
+++ b/394_字符串解码.md
@@ -83,6 +83,53 @@ class Solution {
 }
 ```
 
+### 2024年1月26日
+
+```java
+public class Solution{
+    public String decodeString(String s){
+        // 存储当前需要 重复的字符串
+        var res =  new StringBuilder();
+        var cs = s.toCharArray();
+        // 统计当前的倍率
+        var cnt = 0;
+        var st = new ArrayDeque<StringBuilder>();
+        var cnts = new ArrayDeque<Integer>();
+        // 2[a3[b]]
+        for(int i=0;i<cs.length;i++){
+            var c= cs[i];
+            if(c=='['){
+                // 这个时候需要是新的开始 , 压缩当前缓存的字符串以及对应的倍率
+                st.push(res);
+                cnts.push(cnt);
+                cnt = 0;
+                res= new StringBuilder();
+            }else if(c==']'){
+                // 需要进行处理
+                // 出栈, 统计当前 [] 中的字符串倍率的内容
+                var tmp = new StringBuilder();
+                tmp.append(res.toString().repeat(cnts.pop()));
+                res = new StringBuilder(st.pop()+tmp.toString());
+            }else if(isNumber(c)){
+                // 数字的情况 : 考虑连续数字的情况
+                cnt = cnt * 10 + Integer.parseInt(""+c);
+            }else{
+                // 字母的情况
+                res.append(c);
+            }
+        }        
+        return res.toString();
+    }
+
+    private boolean isNumber(char c){
+        return '0'<=c && c<='9';
+    }
+
+}
+```
+
+
+
 ## 思路
 
 对于这些括号处理之类的题目, 基本上都需要使用到栈来进行辅助
