--- a/84_柱状图中最大的矩形[单调栈].md
+++ b/84_柱状图中最大的矩形[单调栈].md
@@ -69,6 +69,30 @@ func max(a, b int) int {
 }
 ```
 
+### Java
+
+```java
+class Solution {
+    public int largestRectangleArea(int[] heights) {
+        var n= heights.length;
+        var hs = new int[n+2];
+        System.arraycopy(heights,0,hs,1,n);
+        var st = new ArrayDeque<Integer>();
+        var res=0;
+        for(int i=0;i<hs.length;i++){
+            while(st.size()>1 && hs[i]<hs[st.peek()]){
+                var h = hs[st.pop()];
+                // 两边的边界的高度小于h,因此不能统计到wide
+                var w = i-st.peek()-1;
+                res = Math.max(res,h*w);
+            }
+            st.push(i);
+        }
+        return res;
+    }
+}
+```
+
 ## 思路
 
 **单调栈**
@@ -96,10 +120,36 @@ curSize = height * wide
 
 从上面的代码可以注意我们在 弹出元素之后又调用` stack.peekLast()`
 
+当上面的元素计算到 高度为 4 的柱子的时候, 这里的wide对应的是 `i-st.peek()-1` , 也就是利用的是前一个元素的位置
+
+因为计算面积的左右区间是 : 
+
+左边第一个比当前的高度h低的 下标
+
+以及 
+
+右边第一个比当前的高度h低的 下标
+
+现在我们找到右边的是 i , 由于我们的单调栈是递增的, 假设现在栈中没有相同的元素, 那么 左边的元素也就是 `st.peek()`
+
+```java
+while(st.size()>1 && h[i] < h[st.peek()]){
+	var height = h[st.pop()];
+    // wide 是左右两个区间的距离
+    var wide = i - st.peek() - 1;
+    res = Math.max(res,hegith * wide);
+}
+st.push(i);
+```
+
+
+
+----
+
 接着引入**哨兵** 的作用 
 
 由于我们的计算面积的方法**只有在出现 递减的元素 才能执行** , 因此我们可以在 heights 的末尾添加一个高度为0 的元素 , 使得 计算高度的必定执行 ， 这是其中一个哨兵.
 
-另一个哨兵位于 队头 ,  前面我们在弹出元素之后又调用了 `stack.peekLast()` , 如果当前stack只有一个元素那么就会导致此时无法计算当前元素的面积 , 因此我们需要在开头加上一个 高度为0的元素（哨兵） 。
+另一个哨兵位于 队头 ,  前面我们在弹出元素之后又调用了 `stack.peekLast()` , 如果<u>当前stack只有一个元素那么就会导致此时无法计算当前元素的面积</u> , 因此我们需要在开头加上一个 高度为0的元素（哨兵） 。
 
 ![image-20231009182834792](assets/image-20231009182834792.png)
