--- a/139_单词拆分.md
+++ b/139_单词拆分.md
@@ -52,36 +52,45 @@
 
 ### 回溯
 
-
+时间复杂度 O(N^2^)
 
 ```java
 class Solution {
-    // 0:original , 1:true, -1:false
+
+    Set<String> set = new HashSet<>();
+
+    // 用来统计当前的mem[i] 前面的字符是否在词典中
+    // 0 1 -1
     int[]mem;
+
     public boolean wordBreak(String s, List<String> wordDict) {
-        mem=new int[s.length()];
-        // 通过set判断是否在词典中
-        Set<String> set = new HashSet();
-        for(String str : wordDict){
+        int n=s.length();
+        mem = new int[n];
+        for(var str : wordDict){
             set.add(str);
         }
-        return traverse(set,s.toCharArray(),0);
+        return traverse(s.toCharArray(),0);
     }
 
-    boolean traverse(Set<String> set , char[]chars,int idx){
-        if(idx==chars.length){
+    private boolean traverse(char[]cs,int idx){
+        if(idx==cs.length){
             return true;
         }
         if(mem[idx]!=0){
             return mem[idx]==1;
         }
-        for(int i=idx;i<chars.length;i++){
-            if(set.contains(new String(chars,idx,i-idx+1))){
-               if(traverse(set,chars,i+1)) return true;
+
+        for(int i=idx;i<cs.length;i++){
+            // char[] start len 
+            if(set.contains(new String(cs,idx,i-idx+1))){
+                if(traverse(cs,i+1)){
+                    return true;
+                }
             }
         }
         mem[idx]=-1;
-        return false;
+        // 如果在遍历过程中都没有匹配完毕, 那么返回 false
+        return false;        
     }
 }
 ```
@@ -127,6 +136,31 @@ class Solution {
         }
         return dp[n];
     }
+}
+```
+
+#### DP-GO
+
+```go
+func wordBreak(s string, wordDict []string) bool {
+    // DP做法
+    n := len(s)
+    // dp[i]表示前i个字符是否在词典中
+    dp := make([]bool, n+1)
+    dp[0] = true
+    for i := 0; i <= n; i++ {
+        if !dp[i] {
+            continue
+        }
+        // 遍历 i 条件下的字典
+        for _, str := range wordDict {
+            l := len(str)
+            if  l+i <= n && s[i : i+l] == str {
+                dp[i+l] = true
+            }
+        }
+    }
+    return dp[n]
 }
 ```
 
