--- a/152_乘积最大子数组.md
+++ b/152_乘积最大子数组.md
@@ -58,6 +58,40 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func maxProduct(nums []int) int {
+    // 分别存储正数,负数的最大值, 然后在遍历的过程中维护最大值
+    n:=len(nums)
+    // dp1[i]表示以 nums[i-1]元素结尾的子数组的最大值, dp2[i]为最小值
+    dp1:=make([]int,n+1)
+    dp2:=make([]int,n+1)
+    res:=nums[0]
+    dp1[0]=1
+    dp2[0]=1
+    for i:=1;i<=n;i++{
+        dp1[i]=max(max(nums[i-1]*dp1[i-1],nums[i-1]*dp2[i-1]),nums[i-1])
+        dp2[i]=min(min(nums[i-1]*dp1[i-1],nums[i-1]*dp2[i-1]),nums[i-1])
+        res=max(dp1[i],res)
+    }   
+    return res;
+}
+func max(a, b int) int{
+    if a>b{
+        return a
+    }
+    return b
+}
+func min(a, b int) int{
+    if a>b{
+        return b
+    }
+    return a
+}
+
+```
+
 ### O(1)空间优化
 
 前面的max ,min 我们可以看到 当前的状态只依赖于前面的一中状态 , 因此可以通过 单独的一个变量来进行存储(前面的状态)
@@ -82,13 +116,46 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func maxProduct(nums []int) int {
+    // 分别存储正数,负数的最大值, 然后在遍历的过程中维护最大值
+    n:=len(nums)
+    // dp1[i]表示以 nums[i-1]元素结尾的子数组的最大值, dp2[i]为最小值
+    l,h:=1,1
+    res:=nums[0]
+    for i:=1;i<=n;i++{
+        tmpH=max(max(nums[i-1]*h,nums[i-1]*l),nums[i-1])
+        tmpL=min(min(nums[i-1]*h,nums[i-1]*l),nums[i-1])
+       	h=tmpH
+        l=tmpL
+        res=max(h,res)
+    }   
+    return res;
+}
+func max(a, b int) int{
+    if a>b{
+        return a
+    }
+    return b
+}
+func min(a, b int) int{
+    if a>b{
+        return b
+    }
+    return a
+}
+
+```
+
 ## 思路
 
-关于乘积的问题, 我们很容易考虑到 正负的问题
+关于乘积的问题, 我们很容易考虑到 **正负**的问题
 
 可以分成下面的几种情况(注意我们统计的是以 nums[i]结尾的 情况)
 
-- 考虑到我们当前的nums[i]是一个负数, **那么需要前面的结果中也有一个负数来使得当前的结果可以尽量大**
+- 考虑到我们当前的nums[i]是一个负数, **那么需要前面的结果中也有一个负数来使得当前的结果可以尽量大** 比如 (3,-1,-2,-5)的情况
 
 这里我们可以分开存储 , 分别存储前置结果中 的 max 以及 min 
 
