--- a/32_最长有效括号.md
+++ b/32_最长有效括号.md
@@ -120,6 +120,90 @@ class Solution {
 
 
 
+### go
+
+DP
+
+```go
+func longestValidParentheses(s string) int {
+	n := len(s)
+	dp := make([]int, n+1)
+	st := make([]int, 0)
+	// dp[i]表示前i个字符的有效括号的长度
+	dp[0] = 0
+	res := 0
+	for i := 0; i < n; i++ {
+		if s[i] == '(' {
+			st=append(st,i)
+		} else {
+            // 有效括号
+			if len(st) != 0 {
+		        idx := st[len(st)-1]
+				st = st[:len(st)-1]
+				dp[i+1] = i - idx + 1 + dp[idx]
+			} 
+		}
+		res = max(res, dp[i+1])
+	}
+	return res
+}
+
+func max(a,b int)int {
+    if a>b {
+        return a
+    }
+    return b
+}
+```
+
+
+
+贪心
+
+```go
+func longestValidParentheses(s string) int {
+    l,r,res:=0,0,0
+    n:=len(s)
+    for i:=0;i<n;i++{
+        if(s[i]=='('){
+            l++
+        }else{
+            r++
+        }
+        if l==r{
+            res=max(res,l*2)
+        }
+        if (r>l){
+            l,r=0,0
+        }
+    }
+    l,r=0,0
+    for i:=n-1;i>=0;i--{
+        if(s[i]=='('){
+            l++
+        }else{
+            r++
+        }
+        if l==r{
+            res=max(res,l*2)
+        }
+        if (l>r){
+            l,r=0,0
+        }
+    }
+    return res
+}
+
+func max(a,b int)int {
+    if a>b {
+        return a
+    }
+    return b
+}
+```
+
+
+
 ## 思路
 
 ###  DP
@@ -161,3 +245,53 @@ class Solution {
 便利的过程中如果出现left==right, 说明括号合法(因为只要相等, 前面的不合法的可能性已经被我们排除 , 此时括号是必然合法的)
 
 维护res作为最长的合法括号长度 ,最后返回即可。
+
+
+
+
+
+----
+
+## 题解区解法的描述都很丰富, 但是找了一圈没有找到说明 dp 数组的规模为什么需要是`n+1`的题解。
+
+这里简单描述一下我的看法 :
+
+对于 使用dp + Stack的解法来说，在后续状态转移的时候, 由于**左右括号**的问题, 只有在**匹配到对应的右括号的时候我们才能知道有效的括号的长度**。
+
+但是Stack中存储的是匹配的括号的**左括号的index**，因此在设计dp数组的时候可以设计成 `dp[i]` 表示前i个字符中有效括号的长度, `s[i]`对应`dp[i+1]` ,
+
+之后在计算把长度统计到 `dp[i+1]`, 在后续使用的时候, 通过 左括号的下标, 即可定位到有效括号的长度。
+
+> 如果使用dp[i]就会出现少计算括号长度的情况
+
+```go
+func longestValidParentheses(s string) int {
+	n := len(s)
+	dp := make([]int, n+1)
+	st := make([]int, 0)
+	// dp[i]表示前i个字符的有效括号的长度
+	dp[0] = 0
+	res := 0
+	for i := 0; i < n; i++ {
+		if s[i] == '(' {
+			st=append(st,i)
+		} else {
+            // 有效括号
+			if len(st) != 0 {
+		        idx := st[len(st)-1]
+				st = st[:len(st)-1]
+				dp[i+1] = i - idx + 1 + dp[idx]
+			} 
+		}
+		res = max(res, dp[i+1])
+	}
+	return res
+}
+
+func max(a,b int)int {
+    if a>b {
+        return a
+    }
+    return b
+}
+```
