--- a/560_和为 K 的子数组[前缀和].md
+++ b/560_和为 K 的子数组[前缀和].md
@@ -56,6 +56,29 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func subarraySum(nums []int, k int) int {
+    n, res := len(nums), 0
+    //m := make(map[int]int, 0)
+    pre := make([]int, n+1)
+    for i := 0; i < n; i++ {
+        pre[i+1] = pre[i]+nums[i]
+    }
+    for i := 0; i < n; i++ {
+        for j := i; j < n; j++ {
+            if pre[j+1]-pre[i] == k {
+                res++
+            }
+        }
+    }
+    return res
+}
+```
+
+
+
 ### 前缀和优化
 
 对于上面代码中的 `for(int r=l;r<n;r++){` 的循环, 会存在大量的重复计算 , 
@@ -118,6 +141,10 @@ class Solution {
 
 因此在定义pre的时候需要定义规模为 n+1(n为nums中元素的长度) , 这是为了考虑到空数组的情况(k==0)
 
+以及考虑到 i==null的情况, 即仅有j中的pre[j]包含元素, pre[i]不包含元素
+
+同时也要考虑到k=0, 没有满足的子数组的情况, 因此不能让i,j重合。
+
 并且在计算的时候也要考虑到这一点
 
 ----
@@ -169,4 +196,43 @@ class Solution {
     }
 }
 ```
+
+---
+
+2024年2月14日更新
+
+上面的map存储前缀和其实非常好理解
+
+map对应的key为: 前x个数组元素之和, 其中 x范围为[0,len(nums)]
+
+对应的value就是 前x个数组元素之和出现的次数 , 这里的次数最初是对应 1, 后面会随着子数组的扩展而增加
+
+cur - k 即为对应着 某两个子数组之差为 k , 他们的差的子数组也就对应我们需要的结果
+
+之后我们更新 当前的前缀和 +1 即可
+
+对于最开始的初始化 前缀和0 的出现次数为1, 是为了保证 刚好某个子数组的和为k的情况可以统计到
+
+> 比如当前 k=5, nums={1,2,2}
+>
+> 如果我们没有m[0]=1
+>
+> 那么 在遇到 cur=5的时候, res+=m[cur-k]就无法正常记录这里的子数组
+
+```go
+func subarraySum(nums []int, k int) (res int) {
+	cur, m := 0, make(map[int]int)
+	m[0] = 1
+	for _, num := range nums {
+		cur += num
+		// 保存记录
+		res += m[cur-k]
+		// 更新个数
+		m[cur] += 1
+	}
+	return
+}
+```
+
+
 
