--- a/64_最小路径和.md
+++ b/64_最小路径和.md
@@ -56,6 +56,35 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func minPathSum(dp [][]int) int {
+    m,n:=len(dp),len(dp[0])
+    for i:=1;i<m;i++{
+        dp[i][0]+=dp[i-1][0]
+    }
+    for i:=1;i<n;i++{
+        dp[0][i]+=dp[0][i-1]
+    }
+    for i:=1;i<m;i++{
+        for j:=1;j<n;j++{
+            dp[i][j]+=min(dp[i-1][j],dp[i][j-1])
+        }
+    }
+    return dp[m-1][n-1]
+}
+
+func min(a, b int)int{
+    if a<b{
+        return a
+    }
+    return b
+}
+```
+
+
+
 ## 思路
 
 > **说明：**每次只能向下或者向右移动一步。
