--- a/5_最长回文子串.md
+++ b/5_最长回文子串.md
@@ -58,6 +58,29 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func longestPalindrome(s string) string {
+    l,r,n:=0,0,len(s)
+    for i:=0;i<n-1;i++{
+        pro:=func(i,j int){
+            for i>=0 && j<len(s) && s[i]==s[j]{
+                if j-i+1 >= r-l+1 {
+                    l,r=i,j
+                    fmt.Println(i+j)
+                }
+                i--;
+                j++
+            }
+        }
+        pro(i,i+1)
+        pro(i,i)
+    }
+    return s[l:r+1]
+}
+```
+
 ## 思路
 
 遍历字符串 , 对于每个字符左右展开进行回文串的长度统计 ,
@@ -65,3 +88,8 @@ class Solution {
 考虑到回文串的长度可能是奇数也可能是偶数
 
 因此在遍历的时候需要`cal(i,i)` and  `cal(i,i+1)`进行统计 , 分别对应 奇数 和 偶数的情况
+
+---
+
+时间复杂度：O(N^2^)，这里 NNN 是字符串的长度；
+空间复杂度：O(1)，只使用到常数个临时变量，与字符串长度无关。
