--- a/1143_最长公共子序列.md
+++ b/1143_最长公共子序列.md
@@ -69,6 +69,32 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func longestCommonSubsequence(text1 string, text2 string) int {
+    m,n:=len(text1),len(text2)
+    dp:=make([][]int,m+1)
+    for i:= range dp {
+        dp[i] = make([]int, n+1)
+    }
+    // dp[i][j]表示text1前i个,text2前j个字符中最长的公共子序列的长度
+    for i:=1;i<=m;i++{
+        for j:=1;j<=n;j++{
+            if text1[i-1]==text2[j-1] {
+                dp[i][j]= dp[i-1][j-1] +1
+            }else{
+                dp[i][j]= max(dp[i-1][j],dp[i][j-1])
+            }
+        }
+    }
+    return dp[m][n]
+}
+
+```
+
+
+
 ## 思路
 
 本题是非常经典的DP问题,   我们定义dp数组 `dp[i][j]`表示 **s1前i** s2**前j个** 字符的 最长公共子序列的长度
