--- a/72_编辑距离.md
+++ b/72_编辑距离.md
@@ -73,6 +73,38 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func minDistance(word1 string, word2 string) int {
+    m,n:=len(word1),len(word2)
+    // dp[i][j]表示word1前i个,word2前j个字符中变成相同的字符串的最少操作次数
+    dp:=make([][]int,m+1)
+    for i:= range dp {
+        dp[i] = make([]int, n+1)
+        dp[i][0]=i
+    }
+    for j:=0;j<=n;j++{
+        dp[0][j]=j
+    }
+    for i:=1;i<=m;i++{
+        for j:=1;j<=n;j++{
+            // 相同不需要操作
+            if word1[i-1]==word2[j-1] {
+                dp[i][j]= dp[i-1][j-1]
+            }else{
+                // 替换, 删除/插入
+                dp[i][j]= min(min(dp[i-1][j],dp[i][j-1]),dp[i-1][j-1]) +1
+            }
+        }
+    }
+    return dp[m][n]
+}
+
+```
+
+
+
 ## 思路
 
 本题我们采用DP的思想 , 对于 任意的 字符串 w1, w2
