--- a/136_只出现一次的数字.md
+++ b/136_只出现一次的数字.md
@@ -54,6 +54,18 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func singleNumber(nums []int) int {
+    res:=0
+    for _,val :=range nums{
+        res^=val
+    }
+    return res
+}
+```
+
 ## 思路
 
 利用位运算 , 对于一个数字 n, 必然存在n^n ==0
