--- a/287_寻找重复数.md
+++ b/287_寻找重复数.md
@@ -60,6 +60,26 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func findDuplicate(nums []int) int {
+    s,f:=nums[0],nums[nums[0]]
+    for s!=f{
+        s=nums[s];
+        f=nums[nums[0]]
+    }
+    s=0
+    for s!=f{
+        s=nums[s]
+        f=nums[f]
+    }
+    return s
+}
+```
+
+本题 通过快慢指针的思想
+
 ## 思路
 
 我们从下标为 0 出发，根据 f(n) 计算出一个值，以这个值为新的下标，再用这个函数计算，以此类推产生一个类似链表一样的序列。
