--- a/137_只出现一次的数字 II.md
+++ b/137_只出现一次的数字 II.md
@@ -1,3 +1,5 @@
+## 题目
+
 [137. 只出现一次的数字 II](https://leetcode.cn/problems/single-number-ii/)
 
 给你一个整数数组 `nums` ，除某个元素仅出现 **一次** 外，其余每个元素都恰出现 **三次 。**请你找出并返回那个只出现了一次的元素。
@@ -25,6 +27,54 @@
 - `nums` 中，除某个元素仅出现 **一次** 外，其余每个元素都恰出现 **三次**
 
 ## 代码
+
+假定一个元素出现了 3 次, 例如 4, 那么我们取出这个元素的 二进制表达, 其中的每一位必然也是 出现三次 
+
+0100
+
+0100
+
+0100
+
+题目给出的元素大小是有限的, 因此可以通过变量来存储 这些出现的位数的次数, 
+
+```go
+func singleNumber(nums []int)int{
+    n:=0
+    for i:=0;i<32;i++{
+        cur :=0
+        // 计算从右数第i+1位
+        for _,val:=range nums{
+			cur += val>>i & 1
+        }
+        n |= cur%3 << i
+    }
+    return n
+}
+```
+
+:bulb:注意! 
+
+上面的代码在计算的时候 , 由于val 在64位OS下是 8byte, 由于 负数的补码的1在第一位, 因此这里的循环使用的是 64 次的循环, 会导致无法取到前面补码的1(符号位), 导致在计算的时候出现异常, 解决办法就是将循环的次数由32 变为 64
+
+>  或者在计算的时候统一转换为 int32, 不过在返回的时候需要转换过来
+
+```go
+func singleNumber(nums []int)int{
+    n:=0
+    for i:=0;i<64;i++{
+        cur :=0
+        // 计算从右数第i+1位
+        for _,val:=range nums{
+            cur += val>>i & 1
+        }
+        n |= cur%3 << i
+    }
+    return n
+}
+```
+
+
 
 **排序**
 
