--- a/4._寻找两个正序数组的中位数.md
+++ b/4._寻找两个正序数组的中位数.md
@@ -74,6 +74,53 @@ class Solution {
 }
 ```
 
+go
+
+```go
+func findMedianSortedArrays(nums1 []int, nums2 []int) float64 {
+    total := len(nums1) + len(nums2)
+    if total%2 == 1 {
+        midIndex := total/2
+        return float64(getKth(nums1, nums2, midIndex + 1))
+    } else {
+        midIndex1, midIndex2 := total/2 - 1, total/2
+        return float64(getKth(nums1, nums2, midIndex1 + 1) + getKth(nums1, nums2, midIndex2 + 1)) / 2.0
+    }
+    return 0
+}
+
+func getKth(nums1, nums2 []int, k int) int {
+    index1, index2 := 0, 0
+    for {
+        if index1 == len(nums1) {
+            return nums2[index2 + k - 1]
+        }
+        if index2 == len(nums2) {
+            return nums1[index1 + k - 1]
+        }
+        if k == 1 {
+            return min(nums1[index1], nums2[index2])
+        }
+        half := k/2
+        newIndex1 := min(index1 + half, len(nums1)) - 1
+        newIndex2 := min(index2 + half, len(nums2)) - 1
+        pivot1, pivot2 := nums1[newIndex1], nums2[newIndex2]
+        if pivot1 <= pivot2 {
+            k -= (newIndex1 - index1 + 1)
+            index1 = newIndex1 + 1
+        } else {
+            k -= (newIndex2 - index2 + 1)
+            index2 = newIndex2 + 1
+        }
+    }
+    return 0
+}
+```
+
+
+
+
+
 ## 思路
 
 根据中位数的定义，当 m+n 是奇数时，中位数是两个有序数组中的第(m+n)/2 个元素，
@@ -97,7 +144,7 @@ class Solution {
         // 中位数 , 
         int m = nums1.length,n=nums2.length;
         int left = (m+n+1)/2;
-        int right = (m+n+2)/2;
+        int right = (m+n+2)/2;	
         return (getKth(nums1,0,m-1,nums2,0,n-1,left)+getKth(nums1,0,m-1,nums2,0,n-1,right))/2.0;
     }
     
